feat: refine Remote Stream Refs with Artery multiplexing and eliminate JVM reflective access warnings